Fixed video-container overflow

--- a/css/video-container.css
+++ b/css/video-container.css
@@ -13,7 +13,6 @@
   align-items: center;
   height: 100%;
   width: 100%;
-  max-height: 70vh;
   max-width: 1024px;
 }
 
